k8s/redis-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            limits:
              memory: '128Mi'
              cpu: '250m'
          ports:
            - containerPort: 6379
